# prakash-videogen

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: setup.sh  start.sh
src/: auth.rs  cleanup.rs  config.rs  main.rs  webhook.rs
src/backend/: mod.rs
src/backend/comfyui/: client.rs  mod.rs  types.rs
src/routes/: generate.rs  health.rs  mod.rs  upload.rs  view.rs
