[package]
name = "videogen-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# WebSocket (for ComfyUI monitoring)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.37", features = ["tracing"] }
sentry-tracing = "0.37"

# Async trait for dyn-compatible backends
async-trait = "0.1"

# WebSocket protocol types
tungstenite = "0.26"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
url = "2"
